-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.7.2
-
None
-
-
3aca4589b (dev), 2a10643d4 (6.8), afac57f5e (6.7)
QPushbuttons and QToolButtons look never change on hover with new windows 11 style
| For Gerrit Dashboard: QTBUG-126503 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 570877,5 | QWindows11Style: Change appearance when Button is disabled/hovered | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 573517,2 | QWindows11Style: Change appearance when Button is disabled/hovered | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
| 573955,2 | QWindows11Style: Change appearance when Button is disabled/hovered | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |